@@ -22,6 +22,7 @@ Forthcoming
     - Added MipNodeFeatures::supportedGnssSources() to lookup supported GNSS Aiding Source options
     - Updated GPS Ionospheric Corrections alpha and beta value types to Vector
     - Automatically detect and add required parameters for save as startup, load startup, and default settings command functions
+    - Fix device info not fully cleared on InertialNode::clearDeviceInfo()
     - Added support for MIP data:
         - Continuous Built-In Test (0xA0, 0x01)
     - Added support for MIP commands:
